# intpuz

./: README.md
24points/: 24points  24points.cpp  24points.h  makefile  readme.md  release.txt
24points/legacy/v0.1/: 24points.cpp  24points.h  license  readme.md  test.cpp
24points/legacy/v0.2/: readme.md
24points/legacy/v0.2/test/: 24points_test.cpp  CMakeLists.txt
24points/src/: 24points.cpp  24points.h  24points.inl  meta.hpp  repl.cpp
cube/: CMakeLists.txt  makefile  readme.md  release
cube/src/: CMakeLists.txt  coord.cpp  coord.h  coord.hh  cube.cpp  cube.h  cube.hh  debug.hpp  def.h  help.hpp  libcube.cpp  libcube.h  main.cpp  maneuver.cpp  maneuver.h  maneuver.hh  solver.cpp  solver.h  symmetry.h  symmetry.hh  table.cpp  table.h  table.hh  twophase.cpp  twophase.h  twophase.hh
cube/test/: CMakeLists.txt  coord_test.cpp  cube_test.cpp  maneuver_test.cpp
gomoku/: common.py  config.yaml  gomoku.py  gui.py  help.py  main.py  player.py  readme.md  record.py  rule.py
minesweeper/: config.py  gui.py  main.py  minesweeper.py  model.py  res.py
tetris/: makefile  model.cpp  model.h  readme.md  releases.txt  tetris.cpp  tetris.h  view.cpp  view.h
tetris/src/: cmakelists.txt  controller.cpp  controller.h  def.h  events.cpp  events.h  help.hpp  main.cpp  model.cpp  model.h  style.h  tetris.cpp  tetris.h  view.h  view.inl
tetris/stuff/: debug.cpp  debug.h  help.hpp  model.toml  option.h  opton.cpp
